Enhance UI and UX for temperature control minigame
Improves the visual design and interactivity of the temperature control minigame. Updates include a more modern and dynamic CSS style, a new temperature controls panel in the UI, refined canvas and panel styling, and improved feedback and status rendering in the game. Game window size is adjusted to 700x450 for a better fit, and the renderer now provides clearer instructions and animated effects on the welcome screen.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          </header>
 
         <div class="game-area">
-            <canvas id="gameCanvas" width="800" height="600"></canvas>
+            <canvas id="gameCanvas" width="700" height="450"></canvas>
             
             <div class="game-info">
                 <div class="info-panel">
@@ -37,6 +37,17 @@
                         <li>Maximize quality over 60 seconds</li>
                         <li>Earn trays based on your cooking performance!</li>
                     </ul>
+                </div>
+
+                <div class="controls-panel">
+                    <h3>Temperature Controls</h3>
+                    <div class="controls">
+                        <button id="tempUp" class="control-btn">↑ Increase (+5%)</button>
+                        <button id="tempDown" class="control-btn">↓ Decrease (-5%)</button>
+                    </div>
+                    <div class="control-info">
+                        Use arrow keys or buttons to adjust temperature
+                    </div>
                 </div>
 
                 <div class="inventory-panel">
