--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                             <span class="stat-label">Average Score:</span>
                             <span class="stat-value">0%</span>
                         </div>
+                        <div class="stat-item">
+                            <span class="stat-label">Cash:</span>
+                            <span id="cash-value" class="stat-value">0</span>
+                        </div>
                     </div>
                     <div class="recent-trays-section">
                         <h4>Recent Activity:</h4>
@@ -99,8 +103,11 @@
                             <div class="no-trays">Start playing to collect trays!</div>
                         </div>
                     </div>
+                    <button id="sellAll" class="sell-btn">Sell All Trays</button>
                     <button id="clearInventory" class="clear-inventory-btn">Clear All Data</button>
                 </div>
+
+
             </div>
         </div>
 
